# smallWiener

./: .gitignore  .gitmodules  CMakeLists.txt  Node2D.tscn  PlayerController.gd  README.md  Trail.gd  World.tscn  design-doc.md  fade.gd  project.godot  smallWiener.gdextension  smallWiener.gdnlib
Auxilliary/: Icon.png.import
BuildScripts/: Findgodot-cpp.cmake
Docs/: todo.md
Engine/godot-git-plugin/: git_api.gdnlib  git_api.gdns
NativeImplementations/: PlayerCharacter.gdns  TapBuffer.gdns
Placeholders/: Blank.png.import  White.png.import
Prefabs/: PlayerCharacter.tscn
Scenes/: MainTest.tscn  SecondaryTest.tscn
Scripts/: Fade.gd  PlayerController.gd  TapBuffer.gd  Trail.gd
Sources/: Main.cpp  PlayerCharacter.cpp  PlayerCharacter.hpp  TapBuffer.cpp  TapBuffer.hpp
Sprites/Art/: Art.png.import  art_0.png.import  art_1.png.import  art_2.png.import  art_3.png.import  art_4.png.import
Sprites/Planks/: storage_00.png.import  storage_01.png.import  storage_02.png.import  storage_03.png.import  storage_04.png.import  storage_05.png.import  storage_06.png.import  storage_07.png.import  storage_08.png.import  storage_09.png.import  storage_10.png.import  storage_11.png.import
